# exchange-api

./: .gitignore  Cargo.toml
binance/: Cargo.toml
binance/src/: futures.rs  lib.rs  local_order_book.rs  parsers.rs  spot.rs
bybit/: Cargo.toml
bybit/src/: futures.rs  lib.rs  local_order_book.rs  parsers.rs  spot.rs
examples/: Cargo.toml  README.md
examples-wasm/: Cargo.toml  README.md
examples-wasm/binance-stream/: Cargo.toml  Trunk.toml  index.html  index.trunk.html
examples-wasm/binance-stream/src/: lib.rs
exchange-api/: Cargo.toml
exchange-api/src/: builder.rs  error.rs  http.rs  lib.rs  output.rs  runtime.rs  traits.rs  types.rs
exchange-api/src/output/: kafka.rs  redis.rs
fix-proto/: Cargo.toml
fix-proto/docs/: fix-protocol.md
fix-proto/src/: connection.rs  error.rs  lib.rs  message.rs  session.rs  tags.rs  types.rs
okx/: Cargo.toml
okx/src/: local_order_book.rs  parsers.rs  spot.rs
ws-proto/: .gitignore  Cargo.toml
ws-proto/docs/: design.md
ws-proto/src/: client.rs  config.rs  error.rs  lib.rs  reconnect.rs  stream.rs
