[workspace]
resolver = "2"
members = [
    "exchange-api",
    "binance",
    "fix-proto",
    "ws-proto",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
] }
futures-util = "0.3"
rdkafka = { version = "0.39", features = ["cmake-build"] }
fred = "10.1"
thiserror = "2"
bytes = "1"
fastrand = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
