[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
exchange-api = { path = "../exchange-api" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ws-proto = { path = "../ws-proto" }
tokio = { workspace = true }

[features]
default = ["spot"]
spot = []
futures = []

[[bin]]
name = "ws-test"
path = "src/bin/ws_test.rs"
