[package]
name = "bybit"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
exchange-api = { path = "../exchange-api", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ws-proto = { path = "../ws-proto" }
ordered-float = "4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
web-time = "1"

[features]
default = ["spot"]
spot = []
futures = []

[[bin]]
name = "ws-test"
path = "src/bin/ws_test.rs"
