[workspace]
resolver = "2"
members = ["binance-stream"]

[workspace.dependencies]
exchange-api = { path = "../exchange-api" }
binance = { path = "../binance" }
bybit = { path = "../bybit" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
gloo-net = "0.6"
futures = "0.3"
serde_json = "1"
