[package]
name = "exchange-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

rdkafka = { workspace = true, optional = true }
fred = { workspace = true, optional = true }

[features]
default = ["kafka", "redis"]
kafka = ["dep:rdkafka"]
redis = ["dep:fred"]
