[package]
name = "exchange-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
ws-proto.workspace = true
futures.workspace = true
async-trait.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
reqwest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dependencies.rdkafka]
workspace = true
optional = true

[dependencies.fred]
workspace = true
optional = true

[features]
default = []
kafka = ["dep:rdkafka"]
redis = ["dep:fred"]
