[package]
name = "binance-stream"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
exchange-api = { workspace = true }
binance = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
gloo-net = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
